Modifications pour que ça marche sur Java-17